--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="instruction">Cough %1$d times on your microphone</string>
     <string name="analyzing">Analyzing...</string>
+    <string name="coronaPositive">You have the Coronavirus</string>
+    <string name="coronaNegative">You don\'t have the Coronavirus</string>
+    <string name="back">Back</string>
 
 </resources>
